objects/Product2/fields/Tire_Season__c.field-meta.xml
<CustomField>
    <fullName>Tire_Season__c</fullName>
    <label>Tire Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All-Seasons</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>All Season</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>