objects/Product2/fields/Tire_Size__c.field-meta.xml
<CustomField>
    <fullName>Tire_Size__c</fullName>
    <label>Tire Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>