objects/Product2/fields/Tread_Depth_32nd__c.field-meta.xml
<CustomField>
    <fullName>Tread_Depth_32nd__c</fullName>
    <label>Tread Depth (32nds)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>