objects/Product2/fields/TREAD_DEPTH_32nds__c.field-meta.xml
<CustomField>
    <fullName>TREAD_DEPTH_32nds__c</fullName>
    <label>Load Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>