objects/Product2/fields/Tread_Depth_in_mm__c.field-meta.xml
<CustomField>
    <fullName>Tread_Depth_in_mm__c</fullName>
    <label>Tread Depth (in mm)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>