objects/Product2/fields/Tread_Width_In_Inches__c.field-meta.xml
<CustomField>
    <fullName>Tread_Width_In_Inches__c</fullName>
    <label>Tread Width(In Inches)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>