objects/Product2/fields/Tread_Width_In_mm__c.field-meta.xml
<CustomField>
    <fullName>Tread_Width_In_mm__c</fullName>
    <label>Tread Width(In mm)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>