objects/Product2/fields/Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Size__c</fullName>
    <label>Tyre Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>295/75R22.5</fullName>
            </value>
            <value>
                <fullName>11R22.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>