objects/Product2/fields/Tyre_Type__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Type__c</fullName>
    <label>Tyre Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Retread</fullName>
            </value>
            <value>
                <fullName>Used Import</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <isActive>false</isActive>
                <label>Commercial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>