objects/Product2/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <label>Warranty Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>