objects/Product2/fields/Weight_in_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Weight_in_Kgs__c</fullName>
    <label>Weight (in Kgs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>