objects/Product2/fields/WEIGHT_IN_LBS__c.field-meta.xml
<CustomField>
    <fullName>WEIGHT_IN_LBS__c</fullName>
    <label>Weight (IN LBS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>