objects/Product2/fields/Width_Inches__c.field-meta.xml
<CustomField>
    <fullName>Width_Inches__c</fullName>
    <label>Section Width (Inches)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>