objects/Product2/fields/WooCommerce_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>WooCommerce_Product_ID__c</fullName>
    <label>WooCommerce_Product_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>