objects/Product2/recordTypes/Add_on_Services.recordType-meta.xml
<RecordType>
    <fullName>Add_on_Services</fullName>
    <active>true</active>
    <label>Add on Services</label>
</RecordType>