objects/Product2/recordTypes/FET_Product.recordType-meta.xml
<RecordType>
    <fullName>FET_Product</fullName>
    <active>true</active>
    <label>FET Product</label>
</RecordType>