objects/Product2/recordTypes/Product_Master.recordType-meta.xml
<RecordType>
    <fullName>Product_Master</fullName>
    <active>true</active>
    <label>Base Product</label>
</RecordType>