objects/Product2/recordTypes/Service_Product.recordType-meta.xml
<RecordType>
    <fullName>Service_Product</fullName>
    <active>true</active>
    <label>Service Product</label>
</RecordType>