objects/Product2/recordTypes/SKU.recordType-meta.xml
<RecordType>
    <fullName>SKU</fullName>
    <active>true</active>
    <label>KIT Product</label>
</RecordType>