objects/Product2/listViews/All_Service_Products.listView-meta.xml
<ListView>
    <fullName>All_Service_Products</fullName>
    <columns>Image__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>AXLE_POSITION__c</columns>
    <columns>PLY_RATING__c</columns>
    <columns>Tread_Depth_32nd__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>WEIGHT_IN_LBS__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Service Product</value>
    </filters>
    <label>All Service Products</label>
</ListView>