objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>WooCommerce_Product_ID__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>AXLE_POSITION__c</columns>
    <columns>PLY_RATING__c</columns>
    <columns>Tread_Depth_32nd__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>WEIGHT_IN_LBS__c</columns>
    <columns>AcctSeed__Expense_GL_Account__c</columns>
    <columns>AcctSeed__Inventory_GL_Account__c</columns>
    <columns>AcctSeed__Revenue_GL_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>