objects/Product2/listViews/FET_Products.listView-meta.xml
<ListView>
    <fullName>FET_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>Price__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>AcctSeed__Inventory_Product__c</columns>
    <columns>AcctSeed__Revenue_GL_Account__c</columns>
    <columns>AcctSeed__Expense_GL_Account__c</columns>
    <columns>AcctSeed__Inventory_GL_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.FET_Product</value>
    </filters>
    <label>FET Products</label>
</ListView>